...
        // Show loading spinner if deleting
        if (isLoading) {
            Box(
                modifier = Modifier.fillMaxSize(),
                contentAlignment = Alignment.Center
            ) {
                CircularProgressIndicator(modifier = Modifier.testTag("CircularProgressIndicator"))
            }
        }
        Column {
            TopHeaderBar(title = "Usuń Pojemnik")
            Column (
                modifier = Modifier
...
